--- a/index.html
+++ b/index.html
@@ -4,9 +4,71 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travelgram</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alice&family=Inter:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
+  <div class="bg-surface-color">
+  <nav class="container">
+    <a href="#" id="logo"> <img src=".assets/icons/Logo.svg" alt="Logo Travelgram"> </a>
+    <ul id="primary-menu">
+      <li>
+        <a href="#">
+          <img src=".assets/icons/MagnifyingGlass.svg" alt="Ícone Lupa-Pesquisa">
+        </a>
+      </li>
+      <li><a href="#">Explorar</a></li>
+      <li><a href="#">Minhas Viagens</a></li>
+      <li><a href="#"> <img src=".assets/images/Profile pic.png" alt="Imagem de Perfil"></a></li>
+    </ul>
+  </nav>
+  
+  <header>
+    <div class="container">
+
+    <div id="profile">
+      <img src=".assets/images/Profile pic.png" alt="Imagem de Isabela Torres">
+
+      <div>
+        <h1>Isabela Torres</h1>
+        <p>Amante de viagens, cultura e gastronomia. 🌍✈️  
+          <br> Aqui compartilho as histórias registradas em cada clique,
+           explorando cantinhos fascinantes do nosso planeta a partir
+           da movimentada cidade de São Paulo. 🏙️📸</p>
+      </div>
+
+    </div>
+
+    <ul id="info">
+      <li>
+        <img src=".assets/icons/MapPin.svg" alt="Icone de MapPin">
+        <span> São Paulo, Brazil</span>
+      </li>
+
+      <li>
+        <img src=".assets/icons/AirplaneTilt.svg" alt="Icone de Avião">
+        <span> 37 países</span>
+      </li>
+
+      <li>
+        <img src=".assets/icons/Image.svg" alt="Icone de Imagem">
+        <span> 240 fotos</span>
+      </li>
+    </ul>
+
+
+
+    </div>
+
+
+
+
+    </div>
+  </header>
   
 </body>
 </html>
